Export and Mailer doc done
