# app/src/Controller/MailerController.php
@@ -21,7 +21,38 @@ class MailerController extends AbstractController
      * @throws ExceptionInterface
      */
     #[Route('/forgot-password', name: 'api_forgot_password', methods: ['POST'])]
-    #[OA\Tag(name: 'Mailer')]
+    #[OA\Post(
+        description: 'Used for creating new reset password request with current logged user as its owner',
+        summary: "Creates a request for resetting password",
+        tags: ['Mailer'],
+        responses: [
+            new OA\Response(
+                response: 200,
+                description: 'Successful reset password request request',
+                content: new OA\JsonContent(ref: '#/components/schemas/MailerSuccess')
+            ),
+            new OA\Response(
+                response: 422,
+                description: 'Invalid input data given',
+                content: new OA\JsonContent(ref: '#/components/schemas/MailerInputError')
+            ),
+            new OA\Response(
+                response: 401,
+                description: 'Unauthorized access detected',
+                content: new OA\JsonContent(ref: '#/components/schemas/Unauthorized')
+            ),
+            new OA\Response(
+                response: 400,
+                description: 'Bad Request',
+                content: new OA\JsonContent(ref: '#/components/schemas/InvalidRequest')
+            ),
+            new OA\Response(
+                response: 429,
+                description: 'Too many requests',
+                content: new OA\JsonContent(ref: '#/components/schemas/MailerTooMany')
+            ),
+        ]
+    )]
     public function resetPassword(
         #[MapRequestPayload] RequestPasswordResetDto $requestPasswordResetDto,
         MailerService                                $mailerService
